change class name in api spec, add getThrowing api spec
