# generated/src/main/java/com/kakao/moneythrowing/rest/ThrowingApi.java
@@ -5,9 +5,10 @@
  */
 package com.kakao.moneythrowing.rest;
 
-import com.kakao.moneythrowing.rest.model.CreateThrowingRequest;
-import com.kakao.moneythrowing.rest.model.ThrowingAmount;
-import com.kakao.moneythrowing.rest.model.ThrowingToken;
+import com.kakao.moneythrowing.rest.model.AmountApiModel;
+import com.kakao.moneythrowing.rest.model.CreateThrowingRequestApiModel;
+import com.kakao.moneythrowing.rest.model.ThrowingApiModel;
+import com.kakao.moneythrowing.rest.model.TokenApiModel;
 import java.util.UUID;
 import io.swagger.annotations.*;
 import org.springframework.http.ResponseEntity;
@@ -40,18 +41,37 @@ public interface ThrowingApi {
      *
      * @param X_USER_ID  (required)
      * @param X_ROOM_ID  (required)
-     * @param createThrowingRequest  (required)
+     * @param createThrowingRequestApiModel  (required)
      * @return OK (status code 201)
      */
-    @ApiOperation(value = "뿌리기 생성", nickname = "createThrowing", notes = "", response = ThrowingToken.class, tags={ "Throwing", })
+    @ApiOperation(value = "뿌리기 생성", nickname = "createThrowing", notes = "", response = TokenApiModel.class, tags={ "Throwing", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "OK", response = ThrowingToken.class) })
+        @ApiResponse(code = 201, message = "OK", response = TokenApiModel.class) })
     @RequestMapping(value = "/throwing",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    default ResponseEntity<ThrowingToken> createThrowing(@ApiParam(value = "" ,required=true) @RequestHeader(value="X-USER-ID", required=true) UUID X_USER_ID,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-ROOM-ID", required=true) UUID X_ROOM_ID,@ApiParam(value = "" ,required=true )  @Valid @RequestBody CreateThrowingRequest createThrowingRequest) {
-        return getDelegate().createThrowing(X_USER_ID, X_ROOM_ID, createThrowingRequest);
+    default ResponseEntity<TokenApiModel> createThrowing(@ApiParam(value = "" ,required=true) @RequestHeader(value="X-USER-ID", required=true) UUID X_USER_ID,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-ROOM-ID", required=true) UUID X_ROOM_ID,@ApiParam(value = "" ,required=true )  @Valid @RequestBody CreateThrowingRequestApiModel createThrowingRequestApiModel) {
+        return getDelegate().createThrowing(X_USER_ID, X_ROOM_ID, createThrowingRequestApiModel);
+    }
+
+
+    /**
+     * GET /throwing/{token} : 뿌리기 조회
+     *
+     * @param X_USER_ID  (required)
+     * @param X_ROOM_ID  (required)
+     * @param token  (required)
+     * @return OK (status code 200)
+     */
+    @ApiOperation(value = "뿌리기 조회", nickname = "getThrowing", notes = "", response = ThrowingApiModel.class, tags={ "Throwing", })
+    @ApiResponses(value = { 
+        @ApiResponse(code = 200, message = "OK", response = ThrowingApiModel.class) })
+    @RequestMapping(value = "/throwing/{token}",
+        produces = { "application/json" }, 
+        method = RequestMethod.GET)
+    default ResponseEntity<ThrowingApiModel> getThrowing(@ApiParam(value = "" ,required=true) @RequestHeader(value="X-USER-ID", required=true) UUID X_USER_ID,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-ROOM-ID", required=true) UUID X_ROOM_ID,@ApiParam(value = "",required=true) @PathVariable("token") String token) {
+        return getDelegate().getThrowing(X_USER_ID, X_ROOM_ID, token);
     }
 
 
@@ -63,13 +83,13 @@ public interface ThrowingApi {
      * @param token  (required)
      * @return OK (status code 200)
      */
-    @ApiOperation(value = "뿌린 금액 받기", nickname = "receiveThrowing", notes = "", response = ThrowingAmount.class, tags={ "Throwing", })
+    @ApiOperation(value = "뿌린 금액 받기", nickname = "receiveThrowing", notes = "", response = AmountApiModel.class, tags={ "Throwing", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "OK", response = ThrowingAmount.class) })
+        @ApiResponse(code = 200, message = "OK", response = AmountApiModel.class) })
     @RequestMapping(value = "/throwing/{token}/receive",
         produces = { "application/json" }, 
         method = RequestMethod.PUT)
-    default ResponseEntity<ThrowingAmount> receiveThrowing(@ApiParam(value = "" ,required=true) @RequestHeader(value="X-USER-ID", required=true) UUID X_USER_ID,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-ROOM-ID", required=true) UUID X_ROOM_ID,@ApiParam(value = "",required=true) @PathVariable("token") String token) {
+    default ResponseEntity<AmountApiModel> receiveThrowing(@ApiParam(value = "" ,required=true) @RequestHeader(value="X-USER-ID", required=true) UUID X_USER_ID,@ApiParam(value = "" ,required=true) @RequestHeader(value="X-ROOM-ID", required=true) UUID X_ROOM_ID,@ApiParam(value = "",required=true) @PathVariable("token") String token) {
         return getDelegate().receiveThrowing(X_USER_ID, X_ROOM_ID, token);
     }
 
