# generated/src/main/java/com/kakao/moneythrowing/rest/model/ThrowingTimeApiModel.java
@@ -1,0 +1,109 @@
+package com.kakao.moneythrowing.rest.model;
+
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
+import java.time.OffsetDateTime;
+import org.openapitools.jackson.nullable.JsonNullable;
+import javax.validation.Valid;
+import javax.validation.constraints.*;
+
+/**
+ * ThrowingTimeApiModel
+ */
+
+public class ThrowingTimeApiModel   {
+  @JsonProperty("start")
+  @org.springframework.format.annotation.DateTimeFormat(iso = org.springframework.format.annotation.DateTimeFormat.ISO.DATE_TIME)
+  private OffsetDateTime start;
+
+  @JsonProperty("end")
+  @org.springframework.format.annotation.DateTimeFormat(iso = org.springframework.format.annotation.DateTimeFormat.ISO.DATE_TIME)
+  private OffsetDateTime end;
+
+  public ThrowingTimeApiModel start(OffsetDateTime start) {
+    this.start = start;
+    return this;
+  }
+
+  /**
+   * Get start
+   * @return start
+  */
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public OffsetDateTime getStart() {
+    return start;
+  }
+
+  public void setStart(OffsetDateTime start) {
+    this.start = start;
+  }
+
+  public ThrowingTimeApiModel end(OffsetDateTime end) {
+    this.end = end;
+    return this;
+  }
+
+  /**
+   * Get end
+   * @return end
+  */
+  @ApiModelProperty(value = "")
+
+  @Valid
+
+  public OffsetDateTime getEnd() {
+    return end;
+  }
+
+  public void setEnd(OffsetDateTime end) {
+    this.end = end;
+  }
+
+
+  @Override
+  public boolean equals(java.lang.Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    ThrowingTimeApiModel throwingTime = (ThrowingTimeApiModel) o;
+    return Objects.equals(this.start, throwingTime.start) &&
+        Objects.equals(this.end, throwingTime.end);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(start, end);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class ThrowingTimeApiModel {\n");
+    
+    sb.append("    start: ").append(toIndentedString(start)).append("\n");
+    sb.append("    end: ").append(toIndentedString(end)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(java.lang.Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
